--- a/src/ManticoreSearch.Test/ManticoreSearch.Test.csproj
+++ b/src/ManticoreSearch.Test/ManticoreSearch.Test.csproj
@@ -8,9 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.2" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0-release-23468-02" />
+    <PackageReference Include="xunit" Version="2.5.2-pre.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.2-pre.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
