--- a/src/ManticoreSearch/ManticoreSearch.csproj
+++ b/src/ManticoreSearch/ManticoreSearch.csproj
@@ -2,27 +2,30 @@
 
   <PropertyGroup>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo><!-- setting GenerateAssemblyInfo to false causes this bug https://github.com/dotnet/project-system/issues/3934 -->
-    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>ManticoreSearch</AssemblyName>
-    <PackageId>ManticoreSearch</PackageId>
+    <PackageId>Lofcz.Forks.ManticoreSearch</PackageId>
     <OutputType>Library</OutputType>
     <Authors>OpenAPI</Authors>
     <Company>OpenAPI</Company>
     <AssemblyTitle>OpenAPI Library</AssemblyTitle>
-    <Description>A library generated from a OpenAPI doc</Description>
-    <Copyright>No Copyright</Copyright>
+    <Description>A library generated from a OpenAPI doc
+https://github.com/manticoresoftware/manticoresearch/</Description>
+    <Copyright>Manticore Contributors</Copyright>
     <RootNamespace>ManticoreSearch</RootNamespace>
     <Version>3.3.1</Version>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\ManticoreSearch.xml</DocumentationFile>
     <RepositoryUrl>https://github.com/manticoresoftware/manticoresearch-csharp.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>Minor update</PackageReleaseNotes>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+    <LangVersion>preview</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JsonSubTypes" Version="1.8.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="JsonSubTypes" Version="2.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Polly" Version="8.0.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
